RESOLVED FIXED208593
callAsyncJavaScript with an invalid parameter and no completionHandler should not crash
https://bugs.webkit.org/show_bug.cgi?id=208593
Summary callAsyncJavaScript with an invalid parameter and no completionHandler should...
Alex Christensen
Reported 2020-03-04 13:18:38 PST
callAsyncJavaScript with an invalid parameter should immediately raise an exception
Attachments
Patch (4.72 KB, patch)
2020-03-04 13:20 PST, Alex Christensen
no flags
Patch (2.76 KB, patch)
2020-03-04 13:32 PST, Alex Christensen
beidson: review+
Alex Christensen
Comment 1 2020-03-04 13:20:31 PST
Brady Eidson
Comment 2 2020-03-04 13:24:26 PST
Exceptions are not Swift friendly, so we should continue just returning an error.
Alex Christensen
Comment 3 2020-03-04 13:32:08 PST
Alex Christensen
Comment 4 2020-03-04 13:35:21 PST
Radar WebKit Bug Importer
Comment 5 2020-03-04 13:36:15 PST
Note You need to log in before you can comment on or make changes to this bug.