callAsyncJavaScript with an invalid parameter and no completionHandler should not crash https://bugs.webkit.org/show_bug.cgi?id=208593

Reviewed by Brady Eidson.

Source/WebKit:

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _evaluateJavaScript:asAsyncFunction:withArguments:forceUserGesture:completionHandler:inWorld:]):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/AsyncFunction.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/221515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257876 268f45cc-cd09-0410-ab3c-d52691b4dbfc